# Anazav_repository

./: 1_create.py  2_insert.py  3_migration.py  4_update.py  connect.py  cursor_execute(finish).py  main.py  pyproject.toml  select.py
13 hw 2 part/: pyproject.toml
13 hw 2 part/hw_project/: db.sqlite3
13 hw 2 part/hw_project/hw_project/: settings.py
13 hw 2 part/hw_project/quotes/: forms.py  urls.py  views.py
13 hw 2 part/hw_project/quotes/templates/quotes/: author_detail.html  tag_detail.html
13 hw 2 part/hw_project/users/: forms.py  urls.py  views.py
13 hw 2 part/hw_project/users/templates/users/: login.html  signup.html
13 hw 2 part/hw_project/utils/: migration.py
PycharmProjects/pythonProject/: homework2.py
PycharmProjects/pythonProject/file/: homework1.py  main.py
example/: pyproject.toml
example/hw_project/: db.sqlite3
example/hw_project/hw_project/: settings.py  urls.py
example/hw_project/quotes/: models.py
example/hw_project/quotes/migrations/: 0001_initial.py
example/hw_project/quotes/static/quotes/: style.css
example/hw_project/quotes/templates/quotes/: add_author.html  add_quote.html  base.html  index.html  quote_list.html
example/hw_project/quotes/templatetags/: extract.py
example/hw_project/users/: forms.py  urls.py  views.py
example/hw_project/users/templates/users/: login.html  logout.html  signup.html
example/hw_project/utils/: add_quotes_to_mongo.py  authors.json
hw 5/: main.py  pyproject.toml
hw/quotes_scraper/quotes_scraper/spiders/: authors.json  baza_dannych.py  main.py
hw11/: main.py  pyproject.toml
hw11 2 part/: main.py  pyproject.toml
hw11 2 part/src/conf/: config.py
hw11 2 part/src/database/: db.py
hw11 2 part/src/models/: models.py
hw11 2 part/src/repository/: repository.py
hw11 2 part/src/routes/: auth.py  routes.py
hw11 2 part/src/schemas/: user.py
hw11 2 part/src/utils/: check.py  dependencies.py
hw11/migrations/: env.py
hw11/migrations/versions/: c7de8ec1681f_init.py  dca5aa8b8ebb_добавить_поле_phone_number.py
hw11/src/conf/: config.py
hw11/src/database/: db.py
hw11/src/models/: models.py
hw11/src/repository/: repository.py
hw11/src/schemas/: schemas.py
hw13/: alembic.ini  docker-compose.yml  main.py  pyproject.toml
hw13/migrations/: env.py
hw13/migrations/versions/: 0ed7d04f512b_add_contacts.py  3085754fdea8_init.py  33d730db7171_add_verify_for_user.py  34bdffffdb1c_add_u.py  4446f53dda40_add_avatar.py  914dadea4354_add_r.py  a496883db965_add_username.py  a581a28a1d7b_remove.py  b04b9386c6fe_add_scope_field.py  e5c2c4e969e5_add_user.py
hw13/src/conf/: config.py
hw13/src/database/: db.py
hw13/src/models/: models.py
hw13/src/repository/: repository.py
hw13/src/routes/: auth.py  routes.py  users.py
hw13/src/schemas/: schemas.py  user.py
hw13/src/utils/: auth.py  check.py  dependencies.py  email.py  security.py
hw13/src/utils/templates/: verify_email.html
hw7/: config.ini  main.py  pyproject.toml
hw7/migrations/versions/: a61ef46f1a05_init.py
hw8/: pyproject.toml
hw8/hw/: cache.py  cykl.py  models.py
hw8/hw2/: consumer.py  models.py  producer.py
pythonProject/: Dockerfile  main.py  pyproject.toml  socket_server.py  style.css
pythonProject/data/: data.json
