[tool.poetry]
name = "hw8"
version = "0.1.0"
description = ""
authors = ["Anastasiia2001148 <164914414+Anastasiia2001148@users.noreply.github.com>"]


[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.8.0"
mongoengine = "^0.29.0"
redis = "^5.0.8"
pika = "^1.3.2"
redis-lru = "^0.1.2"


[tool.poetry.group.dev.dependencies]
redis-lru = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
